speech recognition for ios partially done

--- a/ios/language_translator/Info.plist
+++ b/ios/language_translator/Info.plist
@@ -52,5 +52,9 @@
 	<string>We need access to speech recognition to convert your voice to text.</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>We need access to the microphone for voice input.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This app needs microphone access for speech recognition</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>This app needs speech recognition to convert your voice to text</string>
 </dict>
 </plist>
